--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>document</title>
 </head>
 <body>
-    
-
+    <main>
+        <button id="button">Click</button>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
